# dungeons

./: .clang-format  .gitignore  CMakeLists.txt
common/: CMakeLists.txt  main.cc  position.hh  scene.cc  scene.hh  sceneManager.cc  sceneManager.hh  textHelper.cc
game/: CMakeLists.txt  entity.cc  gameScene.cc  stat_mechanics.md
include/common/: colors.h  error_codes.h  files.h  main.hh  position.hh  scene.hh  sceneManager.hh  textHelper.hh
include/game/: component.hh  constants.h  dungeon.hh  effect.hh  entitity.hh  entity.hh  entityResource.hh  gameScene.hh
include/loader/: componentResource.hh  effectResource.hh  entityResource.hh  forge.hh  itemResource.hh  loader.hh  loaderScene.hh  parser.hh  resource.hh  unitResource.hh
include/menu/: element.hh  mainMenu.hh  menuBuilder.hh  menuScene.hh  textButton.hh
loader/: CMakeLists.txt  forge.cc  loader.cc  loaderScene.cc  parser.cc  readme.md
menu/: CMakeLists.txt  element.hh  mainMenu.cc  mainMenu.hh  menuScene.cc  menuScene.hh  textButton.cc
resources/components/: brick.txt
resources/entities/: evil_brick.txt
resources/examples/: savegame.json
resources/items/: bricks.txt
resources/wiltype/: LICENSE-wiltype.txt
